--- a/TravelAgancyPro/Web.config
+++ b/TravelAgancyPro/Web.config
@@ -10,27 +10,12 @@
   </configSections>
   <connectionStrings>
 	  
-	<!-- offline-->
- <!--   
-    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-T4OMHBE\SQLEXPRESS;initial catalog=TravelAgancy;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="TravelAgancyEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-T4OMHBE\SQLEXPRESS;initial catalog=TravelAgancy;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
-	 --> 
-	  
-	  <!-- smarterasp-->
 
-	  <add name="DefaultConnection" connectionString="Data Source=SQL5104.site4now.net;Initial Catalog=db_a8cef5_dbtravelagency01;User Id=db_a8cef5_dbtravelagency01_admin;Password=8frDKawK9nXakz3" providerName="System.Data.SqlClient" />
-	  <add name="TravelAgancyEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL5104.site4now.net;Initial Catalog=db_a8cef5_dbtravelagency01;User Id=db_a8cef5_dbtravelagency01_admin;Password=8frDKawK9nXakz3;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	
+	  <add name="DefaultConnection" connectionString="Data Source=database server name;Initial Catalog=database name ;User Id=username;Password= password" providerName="System.Data.SqlClient" />
+	  <add name="TravelAgancyEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data Source=database server name;Initial Catalog=database name ;User Id=username;Password= password;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	
 
-	 
-	  
-	  <!-- somee.com-->
-  		     <!--  
-        <add name="DefaultConnection" connectionString="Data Source=TravelAgencyDB.mssql.somee.com;user id=TravelAgency_SQLLogin_1;pwd=xwxjzdjyog;initial catalog=TravelAgencyDB;Integrated Security=False" providerName="System.Data.SqlClient" />
-	    <add name="TravelAgancyEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=TravelAgencyDB.mssql.somee.com;user id=TravelAgency_SQLLogin_1;pwd=xwxjzdjyog;initial catalog=TravelAgencyDB;Integrated Security=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-   	   -->
 
   </connectionStrings>
   <appSettings></appSettings>
